fixed the uneven next buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
      color: white;
      background-color: #696969;
      border-style: solid;
-    border-width: 1px;
-    border-color: white;
+     border-width: 1px;
+     border-color: white;
  }
  body {
      background-color: black;
@@ -30,4 +30,8 @@
  #age {
      text-align: center;
      color: white;
+ }
+ 
+ .btn-toolbar{
+     padding: 10px 0px;
  }
